# Programmentwurf_02_Ihler_Schulz

./: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: runGoogleTests.yml
include/: developer.hpp
src/: developer.cpp  main.cpp
test/: test_developer.cpp
